--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,16 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Terraform Init & Apply
+      - name: Terraform Init
         run: |
+          echo "Initializing Terraform..."
           terraform init
-          terraform apply -auto-approve -var="region=${{ github.event.client_payload.region }}"
-          terraform output -json > terraform_output.json
+          echo "Terraform initialized successfully"
 
-      - name: Upload Terraform Output
-        uses: actions/upload-artifact@v3
-        with:
-          name: terraform-output
-          path: terraform_output.json
+      - name: Terraform Apply
+        run: |
+          echo "Applying Terraform configuration..."
+          terraform apply -auto-approve -var="region=${{ github.event.client_payload.region }}"
+          echo "Terraform apply completed"
+          terraform output -json > terraform_output.json
+          cat terraform_output.json
