--- a/.github/workflows/conf_vpn.yml
+++ b/.github/workflows/conf_vpn.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Ansible collections
         run: |
           cd ansible
-          ansible-galaxy install -r requirements.yml
+          ansible-galaxy collection install -r requirements.yml
 
       - name: Configure SSH key
         run: |
