--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,4 +1,4 @@
 ---
-- name: amazon.aws
-  type: collection
-  source: https://galaxy.ansible.com
+collections:
+  - name: amazon.aws
+    version: ">= 5.0.0"
