--- a/.github/workflows/conf_vpn.yml
+++ b/.github/workflows/conf_vpn.yml
@@ -13,31 +13,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Install Ansible and dependencies
+      - name: Install Ansible
         run: |
           sudo apt-get update
-          sudo apt-get install -y ansible python3-pip
-          pip3 install boto3
-
-      - name: Install Ansible collections
-        run: |
-          cd ansible
-          ansible-galaxy collection install amazon.aws
+          sudo apt-get install -y ansible
 
       - name: Configure SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/serv_tren
+          chmod 600 ~/.ssh/serv_tren
+
+      - name: Get EC2 Public IP
+        id: get_ip
+        run: |
+          cd terraform
+          IP=$(terraform output -raw public_ip)
+          echo "public_ip=$IP" >> $GITHUB_OUTPUT
+
+      - name: Create inventory file
+        run: |
+          cd ansible
+          echo "[vpn_servers]" > inventory/hosts
+          echo "${{ steps.get_ip.outputs.public_ip }} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/serv_tren" >> inventory/hosts
 
       - name: Run Ansible Playbook
         run: |
           cd ansible
-          ansible-playbook -i inventory/aws_ec2.yml playbook.yml
+          ansible-playbook -i inventory/hosts playbook.yml
