--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-inventory = inventory/aws_ec2.yml
+inventory = inventory/hosts
 remote_user = ubuntu
-private_key_file = ~/.ssh/id_rsa
+private_key_file = ~/.ssh/serv_tren
 host_key_checking = False
 retry_files_enabled = False
 
