--- a/ansible/inventory/aws_ec2.yml
+++ b/ansible/inventory/aws_ec2.yml
@@ -3,7 +3,7 @@ plugin: amazon.aws.aws_ec2
 regions:
   - eu-west-1
 filters:
-  tag:Name: VpnOpen_server
+  tag:Name: OpenVpn-Server
   instance-state-name: running
 hostnames:
   - private-ip-address
