--- a/.github/workflows/conf_vpn.yml
+++ b/.github/workflows/conf_vpn.yml
@@ -13,10 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
       - name: Install Ansible
         run: |
           sudo apt-get update
           sudo apt-get install -y ansible
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
 
       - name: Configure SSH key
         run: |
@@ -28,8 +38,10 @@ jobs:
         id: get_ip
         run: |
           cd terraform
+          terraform init -backend-config=backend.tf
           IP=$(terraform output -raw public_ip)
           echo "public_ip=$IP" >> $GITHUB_OUTPUT
+          echo $IP > ../ansible/inventory/server_ip.txt
 
       - name: Create inventory file
         run: |
