--- a/ansible/roles/openvpn/tasks/main.yml
+++ b/ansible/roles/openvpn/tasks/main.yml
@@ -8,13 +8,31 @@
     packages:
       - openvpn
       - easy-rsa
-      - awscli
       - python3-pip
+      - curl
+      - unzip
 
-- name: Install AWS CLI
-  pip:
-    name: awscli
-    state: present
+- name: Download AWS CLI installer
+      get_url:
+        url: "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip"
+        dest: "/tmp/awscliv2.zip"
+
+- name: Unzip AWS CLI installer
+      unarchive:
+        src: "/tmp/awscliv2.zip"
+        dest: "/tmp"
+        remote_src: yes
+
+- name: Run AWS CLI installer
+      command: "/tmp/aws/install"
+
+- name: Verify AWS CLI installation
+      command: "aws --version"
+      register: aws_cli_version
+
+- name: Display AWS CLI version
+      debug:
+        msg: "{{ aws_cli_version.stdout }}"        
 
 - name: Create OpenVPN directory structure
   file:
