--- a/ansible/roles/openvpn/tasks/main.yml
+++ b/ansible/roles/openvpn/tasks/main.yml
@@ -102,6 +102,38 @@
   register: build_server
   failed_when: build_server.rc != 0
 
+- name: Networking forwarding configuration
+  block:
+    - name: Check if FORWARD rule exists for tun0 to eth0
+      command: iptables -C FORWARD -i tun0 -o eth0 -j ACCEPT
+      ignore_errors: true
+      register: forward_tun0_to_eth0_rule
+
+    - name: Add FORWARD rule for tun0 to eth0
+      command: iptables -A FORWARD -i tun0 -o eth0 -j ACCEPT
+      when: forward_tun0_to_eth0_rule.rc != 0
+
+    - name: Check if FORWARD rule exists for eth0 to tun0
+      command: iptables -C FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+      ignore_errors: true
+      register: forward_eth0_to_tun0_rule
+
+    - name: Add FORWARD rule for eth0 to tun0
+      command: iptables -A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+      when: forward_eth0_to_tun0_rule.rc != 0
+
+    - name: Check if POSTROUTING MASQUERADE rule exists for tun0
+      command: "iptables -t nat -C POSTROUTING -s {{ openvpn_network }}/24 -o eth0 -j MASQUERADE"
+      ignore_errors: true
+      register: postrouting_masquerade_rule
+
+    - name: Add POSTROUTING MASQUERADE rule for tun0
+      command: "iptables -t nat -A POSTROUTING -s {{ openvpn_network }}/24 -o eth0 -j MASQUERADE"
+      when: postrouting_masquerade_rule.rc != 0
+
+    - name: Save iptables rules
+      shell: iptables-save > /etc/iptables.rules
+
 - name: Create users
   user:
     name: "{{ item }}"
@@ -116,14 +148,34 @@
   loop: "{{ vpn_users }}"
 
 - name: Generate .ovpn files
-  template:
-    src: client.ovpn.j2
-    dest: "/etc/openvpn/clients/{{ item }}.ovpn"
+  shell: |
+    cat > /etc/openvpn/clients/{{ item }}.ovpn << EOF
+    client
+    dev tun
+    proto {{ openvpn_proto }}
+    remote {{ ansible_default_ipv4.address }} {{ openvpn_port }}
+    resolv-retry infinite
+    nobind
+    persist-key
+    persist-tun
+    remote-cert-tls server
+    cipher {{ openvpn_cipher }}
+    auth {{ openvpn_auth }}
+    verb 3
+
+    <ca>
+    $(cat /etc/openvpn/easy-rsa/pki/ca.crt)
+    </ca>
+
+    <cert>
+    $(cat /etc/openvpn/easy-rsa/pki/issued/{{ item }}.crt)
+    </cert>
+
+    <key>
+    $(cat /etc/openvpn/easy-rsa/pki/private/{{ item }}.key)
+    </key>
+    EOF
   loop: "{{ vpn_users }}"
-  vars:
-    ca_cert: "{{ lookup('file', '/etc/openvpn/easy-rsa/pki/ca.crt') }}"
-    client_cert: "{{ lookup('file', '/etc/openvpn/easy-rsa/pki/issued/' + item + '.crt') }}"
-    client_key: "{{ lookup('file', '/etc/openvpn/easy-rsa/pki/private/' + item + '.key') }}"
 
 - name: Upload .ovpn files to S3
   aws_s3:
