--- a/ansible/openvpn.yml
+++ b/ansible/openvpn.yml
@@ -130,31 +130,31 @@
 
     - name: Networking forwarding configuration
       block:
-        - name: Check if FORWARD rule exists for tun0 to eth0
-          command: iptables -C FORWARD -i tun0 -o eth0 -j ACCEPT
+        - name: Check if FORWARD rule exists for tun0 to enX0
+          command: iptables -C FORWARD -i tun0 -o enX0 -j ACCEPT
           ignore_errors: true
-          register: forward_tun0_to_eth0_rule
+          register: forward_tun0_to_enX0_rule
 
-        - name: Add FORWARD rule for tun0 to eth0
-          command: iptables -A FORWARD -i tun0 -o eth0 -j ACCEPT
-          when: forward_tun0_to_eth0_rule.rc != 0
+        - name: Add FORWARD rule for tun0 to enX0
+          command: iptables -A FORWARD -i tun0 -o enX0 -j ACCEPT
+          when: forward_tun0_to_enX0_rule.rc != 0
 
-        - name: Check if FORWARD rule exists for eth0 to tun0
-          command: iptables -C FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+        - name: Check if FORWARD rule exists for enX0 to tun0
+          command: iptables -C FORWARD -i enX0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
           ignore_errors: true
-          register: forward_eth0_to_tun0_rule
+          register: forward_enX0_to_tun0_rule
 
-        - name: Add FORWARD rule for eth0 to tun0
-          command: iptables -A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-          when: forward_eth0_to_tun0_rule.rc != 0
+        - name: Add FORWARD rule for enX0 to tun0
+          command: iptables -A FORWARD -i enX0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+          when: forward_enX0_to_tun0_rule.rc != 0
 
         - name: Check if POSTROUTING MASQUERADE rule exists for tun0
-          command: "iptables -t nat -C POSTROUTING -s {{ openvpn_network }}/24 -o eth0 -j MASQUERADE"
+          command: "iptables -t nat -C POSTROUTING -s {{ openvpn_network }}/24 -o enX0 -j MASQUERADE"
           ignore_errors: true
           register: postrouting_masquerade_rule
 
         - name: Add POSTROUTING MASQUERADE rule for tun0
-          command: "iptables -t nat -A POSTROUTING -s {{ openvpn_network }}/24 -o eth0 -j MASQUERADE"
+          command: "iptables -t nat -A POSTROUTING -s {{ openvpn_network }}/24 -o enX0 -j MASQUERADE"
           when: postrouting_masquerade_rule.rc != 0
 
         - name: Save iptables rules
