--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,3 +78,6 @@ jobs:
         run: |
           cd ansible
           ansible-playbook -i inventory.ini openvpn.yml
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  
