--- a/ansible/openvpn.yml
+++ b/ansible/openvpn.yml
@@ -18,6 +18,8 @@
               - python3-pip
               - curl
               - unzip
+              - python3-boto3
+              - python3-botocore
             state: present
 
         - name: Download AWS CLI installer
