--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -35,5 +35,7 @@ jobs:
         run: |
           echo "Destroying resources..."
           cd terraform
-          terraform destroy -auto-approve -var="region=${{ github.event.client_payload.region }}"
+          terraform destroy -auto-approve \
+           -var="region=${{ github.event.client_payload.region }}" \
+           -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
           echo "Terraform destroy completed"
