--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -38,7 +38,8 @@ jobs:
           terraform destroy -auto-approve \
             -target=aws_instance.VpnOpen_server \
             -target=aws_security_group.vpn_sg \
-            -var="region=${{ github.event.client_payload.region }}"
+            -var="region=${{ github.event.client_payload.region }}" \
+            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
           echo "EC2 destroyed"
 
       - name: Terraform Destroy SSH Key
