--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -39,7 +39,7 @@ jobs:
             -target=aws_instance.VpnOpen_server \
             -target=aws_security_group.vpn_sg \
             -var="region=${{ github.event.client_payload.region }}" \
-            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+            -var="public_key=${{ secrets.SSH_PUBLIC_KEY }}"
           echo "EC2 destroyed"
 
       - name: Terraform Destroy SSH Key
@@ -49,5 +49,5 @@ jobs:
             terraform destroy -auto-approve \
               -target=aws_key_pair.project_key \
               -var="region=${{ github.event.client_payload.region }}" \
-              -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+              -var="public_key=${{ secrets.SSH_PUBLIC_KEY }}"
             echo "SSH Key destroyed"    
